--- a/parking-police/src/pages/segnalazioni/segnalazioni.css
+++ b/parking-police/src/pages/segnalazioni/segnalazioni.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
   background-color: #ebebeb;
   padding: 5%;
   display: flex;
@@ -99,3 +99,41 @@ nav ul li a.active {
   padding: 20px;
   margin-bottom: 10px;
 }
+ */
+main{
+  border: 1px solid red;
+}
+
+ main{
+  padding-top: 50px;
+  width: 50%;
+  margin: 0 auto;
+ }
+
+ /* --------------------------------------------HEADER */
+
+ .container__search{
+  position: relative;
+ }
+
+ .container__search > input{
+  width: 100%;
+  border: none;
+  padding: 10px 20px;
+  font-size: 20px;
+  border-radius: 5px;
+ }
+
+ .search__svg{
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  transform: translateY(-50%);
+  width: 24px;
+  height: 24px;
+ }
+
+ .search__svg svg{
+  width: 100%;
+  height: 100%;
+ }
