--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
+
 body {
   margin: 0;
   height: 100vh;
@@ -11,6 +14,7 @@ body {
 
 *{
   box-sizing: border-box;
+  font-family: "Inter", sans-serif;
 }
 
 code {
