--- a/src/pages/segnalazioni/segnalazioni.css
+++ b/src/pages/segnalazioni/segnalazioni.css
@@ -2,8 +2,8 @@ main{
   border: 1px solid red;
 }
 
- main{
+main{
   padding-top: 50px;
-  width: 50%;
-  margin: 0 auto;
- }
+  display: grid;
+  grid-template-columns: 25% 50% 25%;
+}
