--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -3,10 +3,12 @@ header {
   flex-direction: row;
   align-items: center;
   justify-content: space-around;
+  max-height: 80px;
 }
 
 header ul {
   display: flex;
+  align-items: center;
   gap: 20px;
   padding: 0;
 }
@@ -14,4 +16,13 @@ header ul {
 header li {
   list-style-type: none;
   text-decoration: none;
+  color: black;
+  font-size: 20px;
+}
+
+nav {
+  display: flex;
+  align-items: center;
+  width: 80%;
+  justify-content: space-between;
 }
