--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 body {
   margin: 0;
   height: 100vh;
-  background-color: #1D3557;
+  background-color: #EBEBEB;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
   sans-serif;
