added page parcheggio

--- a/src/components/filter/filter.css
+++ b/src/components/filter/filter.css
@@ -5,6 +5,9 @@ aside{
 }
 
 .filter{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
     padding: 10px 20px;
     background-color: #FFFFFF;
     width: 90%;
