--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -13,9 +13,12 @@ header ul {
   padding: 0;
 }
 
+ul *{
+  text-decoration: none;
+}
+
 header li {
   list-style-type: none;
-  text-decoration: none;
   color: black;
   font-size: 20px;
 }
@@ -25,4 +28,18 @@ nav {
   align-items: center;
   width: 80%;
   justify-content: space-between;
+}
+
+nav ul li {
+  text-decoration: none;
+  color: black;
+  transition: color 0.3s;
+}
+
+nav ul li:hover {
+  color: #A8DADC;
+}
+
+.logo__container__pula img {
+  cursor: pointer;
 }
