--- a/src/components/card-status-ticket/cardTicket.css
+++ b/src/components/card-status-ticket/cardTicket.css
@@ -1,5 +1,5 @@
 .container__cardTicket {
-    padding-top: 15px;
+  padding-top: 15px;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -43,9 +43,34 @@
   background-color: #31d237;
 }
 
-.contianer__status{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 10px;
+.contianer__status {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+}
+
+.svg__ticket {
+  cursor: pointer;
+}
+
+.dropdown {
+  margin-top: 10px;
+  background-color: #f9f9f9;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  width: 100%;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.dropdown-item {
+  padding: 10px;
+  cursor: pointer;
+}
+
+.dropdown-item:hover {
+  background-color: #e0e0e0;
 }
