--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -4,6 +4,7 @@ header {
   align-items: center;
   justify-content: space-around;
   max-height: 80px;
+  background-color: #FFFFFF;
 }
 
 header ul {
@@ -40,13 +41,63 @@ nav ul li:hover {
   color: #A8DADC;
 }
 
-.logo__container__pula img {
+.logo__container__pula {
+  position: relative;
   cursor: pointer;
 }
 
-.logo__container__pula img:hover {
+.logo__container__pula img {
   border-radius: 100%;
-  cursor: pointer;
+  transition: filter 0.5s;
+}
+
+.logo__container__pula img:hover {
   filter: brightness(93%);
-  transition: 0.5s;
+}
+
+.nav-link {
+  color: black;
+  text-decoration: none;
+}
+
+.nav-link-active {
+  color: green;
+}
+
+/* Stili per il menu a tendina */
+.dropdown-menu {
+  position: absolute;
+  border-radius: 10px;
+  top: 100%;
+  right: 0;
+  background-color: #960018;
+  border: none;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  z-index: 1;
+  opacity: 0;
+  transform: translateY(-10px);
+  animation: dropdown 0.3s forwards;
+  width: 100%;
+}
+
+.dropdown-item {
+  color: white;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  background: none;
+  border: none;
+  width: 100%;
+}
+
+.dropdown-item:hover {
+  background-color: #630010; /* non funziona sto cazzo di hover */
+}
+
+/* Animazioni */
+@keyframes dropdown {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
