--- a/src/components/seach-bar/searchBar.css
+++ b/src/components/seach-bar/searchBar.css
@@ -1,5 +1,6 @@
 .container__search{
     position: relative;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
    }
   
    .container__search > input{
