--- a/src/components/card-segnalazione/cardSegnalazione.css
+++ b/src/components/card-segnalazione/cardSegnalazione.css
@@ -19,6 +19,7 @@
   gap: 32px;
   background-color: #ffffff;
   cursor: pointer;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 .segnalazione:hover {
