--- a/src/components/card-status-ticket/cardTicket.css
+++ b/src/components/card-status-ticket/cardTicket.css
@@ -1,18 +1,31 @@
 .container__cardTicket {
-  padding-top: 15px;
+  margin-top: 15px;
   width: 100%;
-  display: flex;
   flex-direction: column;
   gap: 10px;
+  display: flex;
+  justify-content: flex-start;
+  overflow: scroll;
+  height: 650px;
+  scrollbar-width: none;
 }
 
 .ticket {
   width: 100%;
   padding: 10px;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   background-color: #ffffff;
   border-radius: 10px;
+  align-items: flex-start;
+  justify-content: space-between;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.ticket-header {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: space-between;
 }
@@ -56,21 +69,52 @@
 
 .dropdown {
   margin-top: 10px;
-  background-color: #f9f9f9;
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  background-color: white;
   border-radius: 5px;
   width: 100%;
-  padding: 10px;
   display: flex;
   flex-direction: column;
   gap: 5px;
+  display: none;
+  transition: display 0.3s ease;
+}
+
+.dropdown-item__container {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  gap: 35px;
 }
 
 .dropdown-item {
-  padding: 10px;
-  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 5px 0;
+  font-size: 14px;
 }
 
-.dropdown-item:hover {
-  background-color: #e0e0e0;
+.dropdown-item > span {
+  font-weight: 600;
+  font-size: 16px;
+}
+
+.dropdown.show {
+  display: block;
+  max-height: 100px;
+}
+
+.sosta__text {
+  display: flex;
+  gap: 5px;
+  color: #909090;
+  place-items: center;
+  font-size: 16px;
+}
+
+.sosta__svg {
+  width: 15px;
+  height: 15px;
+  display: grid;
+  place-items: center;
 }
