--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -75,12 +75,12 @@
 }
 
 .container__logo {
-  border: 1px solid red;
-  width: 50px;
-  height: 50px;
+  width: 150px;
+  height: 150px;
 }
 
 .container__logo > img {
   width: 100%;
   height: 100%;
+  margin: 0;
 }
