--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -70,7 +70,7 @@ nav ul li:hover {
   border-radius: 10px;
   top: 100%;
   right: 0;
-  background-color: #960018;
+  background-color: #e63946;
   border: none;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   z-index: 1;
@@ -94,7 +94,7 @@ nav ul li:hover {
 
 .dropdown-item__header:hover {
   border-radius: 10px;
-  background-color: #630010;
+  background-color: #ba0120;
   transition: 0.3s;
 }
 
