Co-authored-by: DariochinITS <DariochinITS@users.noreply.github.com> Co-authored-by: LorenzoMorandi-its <LorenzoMorandi-its@users.noreply.github.com>

--- a/src/components/filter/filter.css
+++ b/src/components/filter/filter.css
@@ -4,6 +4,10 @@ aside {
   align-items: flex-start;
 }
 
+.status-button__container .active-btn{
+  background-color: #A8DADC;
+}
+
 .filter {
   display: flex;
   flex-direction: column;
